<resources>
    <string name="app_name">Ticket TakeIt</string>
    <string name="title_home">Home</string>
    <string name="title_movie">Movies</string>
    <string name="title_show">Shows</string>
    <string name="title_history">My Bookings</string>
    <string name="title_profile">Profile</string>
    <string name="top_picked_for_you">Top Movies</string>
    <string name="seeAll">See All</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="no_filters_to_show">No Filters To Show</string>
    <string name="comingSoon">Coming Soon</string>
    <string name="topShow">Top Shows</string>
    <string name="search">Search</string>
    <string name="gallery">gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="editAccount">Edit Account</string>
    <string name="contactUs">Contact Us</string>
    <string name="saveChanges">Save Changes</string>
    <string name="verify">Verify</string>
    <string name="change">Change</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="changeLanguage">Change Language</string>
    <string name="next">Next</string>
    <string name="resend">Resend</string>

    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="login">Login</string>
    <string name="pleaseLogin">Please login to continue</string>
    <string name="signUp">Sign up</string>
    <string name="signUp2">Sign up</string>
    <string name="pleaseFill">Please fill in the required here</string>
    <string name="customer">Customer</string>
    <string name="owner">Owner</string>
    <string name="username">UserName</string>
    <string name="usernameOrMail">UserName or Email</string>
    <string name="forgetPassword">Forget Your Password?</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="alreadyHaveAccount">already have an account?</string>
    <string name="nationalId">National id card</string>
    <string name="typeId">id</string>
    <string name="typeFullName">type full name </string>
    <string name="Continue">Continue</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="previous">Previous</string>
    <string name="location">Location</string>
    <string name="wait">Wait</string>
    <string name="waitLoading">Please wait for loading...</string>
    <string name="savingChanges">Saving changes</string>
    <string name="dataUpdated">Data Updated</string>
    <string name="overview">OverView</string>
    <string name="choose_Cinema">Choose Cinema</string>
    <string name="choose_seats">Choose Seats</string>
    <string name="screen">Screen</string>
    <string name="selected">Selected</string>
    <string name="available">Available</string>
    <string name="reserved">Reserved</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="logout">logout</string>
    <string name="show_details">Show Details</string>
    <string name="movie_details">Movie Details</string>
    <string name="booking_seats">Booking Seats</string>
    <string name="movie_name">Movie name</string>
    <string name="rate">Rate</string>
    <string name="ticket_price">Ticket price</string>
    <string name="ticket_type">Ticket type</string>
    <string name="save">Save</string>
    <string name="show_image">Show image</string>
    <string name="show_name">Show name</string>
    <string name="movies">Movies</string>
    <string name="shows">Shows</string>
    <string name="movies_list">Movies List</string>
    <string name="shows_list">Shows List</string>
    <string name="owner_data">Owner Data</string>
    <string name="confirm_your_email">Confirm Your Email</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="you_about_to_end">You About To End</string>
    <string name="code_has_been_sent">Code has been sent</string>
    <string name="confirm">Confirm</string>
    <string name="or">OR</string>
    <string name="price">Total price :</string>
    <string name="price2">Price</string>
    <string name="book_now">Book now</string>
    <string name="done">Done</string>
    <string name="time">Time</string>
    <string name="time2">Time :</string>
    <string name="bookings_list">Bookings list</string>
    <string name="movie_type">Movie type</string>
    <string name="please_choose_the_user">Please choose(Customer or Owner)</string>
    <string name="field_required">field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="national_id_shoud_14">national id should contains 14 numbers</string>
    <string name="user_found">User Found</string>
    <string name="data_taken_before">data has already been taken before</string>
    <string name="incorrect_data">Incorrect data</string>
    <string name="update">Update</string>
    <string name="delete_account">Delete Account</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_not_found">User not found</string>
    <string name="cinema_name">Cinema name</string>
    <string name="create_cinema">Create your cinema</string>
    <string name="available_days">Available days</string>
    <string name="available_hours">Available hours</string>
    <string name="number_of_seats">Number of seats</string>
    <string name="add_time">Add time :</string>
    <string name="add_time2">Add time</string>
    <string name="number">number</string>
    <string name="create">Create</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="sucess">Success</string>
    <string name="enter_number_of_seats">Enter number of seats</string>
    <string name="total_seats">Total Seats</string>
    <string name="select">Select</string>
    <string name="cast">Cast</string>
    <string name="day">Day</string>
    <string name="day2">Day :</string>
    <string name="skip">Skip</string>
    <string name="my_cinema">My cinema</string>
    <string name="reserved_seats">Reserved Seats :</string>
    <string name="bookings_details">Bookings details</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="booking_details">Booking details</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="cancel_booking">Cancel booking</string>
    <string name="bookings">Bookings</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="single_price">Single price :</string>
    <string name="booked_sucess">Booked successfully</string>
    <string name="egp">EGP</string>
    <string name="choose_ticket_type">please choose ticket type</string>
    <string name="select_seats">please select number of seats</string>
    <string name="choose_hour">please choose hour</string>
    <string name="choose_day">please choose day</string>
    <string name="choose_movie_or_show">please choose movie or show</string>
    <string name="choose_cinema">please choose cinema</string>
    <string name="validation_error">Validation error</string>
    <string name="wrong_data">Wrong Data</string>
    <string name="time_is_fully_booked">Time is fully booked</string>
    <string name="added_success">This movie added successfully to the cinema</string>
    <string name="movie_removed">This movie removed successfully</string>
    <string name="show_removed">This show removed successfully</string>
    <string name="day_added_before">Day added before</string>
    <string name="time_added_before">Time added before</string>
    <string name="no_seats_available">No seats available to book</string>
    <string name="selected_is_greater_than_available">\"selected seats is greater than available \"</string>
    <string name="canceled">canceled successfully</string>
    <string name="no_days_to_show">No days to show</string>
    <string name="no_times_to_show">No times to show</string>
    <string name="no_reserved_seats_to_show">No reserved seats to show</string>
    <string name="choose_at_least_one_time">please choose at least one time</string>


</resources>