<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />
        <variable
            name="model"
            type="com.finalproject.model.LoginModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:fillViewport="true"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:scaleType="fitXY"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/pleaseLogin"
                android:textColor="@color/gray14"
                android:textSize="14sp"
                android:textStyle="bold" />

           <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
               android:layout_marginStart="50dp"
               android:layout_marginEnd="50dp"
                android:orientation="horizontal"
               >

                <Button
                    android:id="@+id/btnCustomer"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_user_btn"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/customer"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                   <View
                       android:layout_width="0dp"
                       android:layout_height="10dp"
                       android:layout_weight="1"
                       android:layout_gravity="center_vertical"
                       android:background="@drawable/horizontal_line2" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/or"
                       android:layout_gravity="center_vertical"
                       android:textColor="@color/white"
                       android:textSize="16sp" />

                   <View
                       android:layout_width="0dp"
                       android:layout_height="10dp"
                       android:layout_weight="1"
                       android:layout_gravity="center_vertical"
                       android:background="@drawable/horizontal_line2" />

               <Button
                    android:id="@+id/btnOwner"
                    android:layout_width="90dp"
                    android:layout_height="45dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_user_btn"
                    android:padding="5dp"
                   android:layout_gravity="center_vertical"
                    android:text="@string/owner"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

           </LinearLayout>


            <LinearLayout
                android:id="@+id/UserName_layout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/small_stroke_color"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle_fill_color2">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_user" />
                </FrameLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:counterEnabled="false"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/white"
                    app:errorEnabled="false"
                    app:hintEnabled="false">

                    <EditText

                        error="@{model.error_user_name}"
                        android:text="@={model.user_name}"
                        android:id="@+id/edUserName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:gravity="start|center_vertical"
                        android:hint="@string/username"
                        android:lines="1"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray14"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/small_stroke_color"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle_fill_color2">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_password" />
                </FrameLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:counterEnabled="false"
                    app:errorEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <EditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:gravity="start|center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:text="@={model.password}"
                        error="@{model.error_password}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray14"
                        android:textSize="14sp"

                        />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/forgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:text="@string/forgetPassword"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/item_clicked2"
                android:textSize="16sp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginEnd="5dp"
                    android:text="@string/dontHaveAccount"
                    android:textColor="@color/gray14"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/signUp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
<!--                <ImageView-->
<!--                    android:id="@+id/lll"-->
<!--                    android:layout_width="24dp"-->
<!--                    android:layout_height="24dp"-->
<!--                    android:layout_gravity="center_vertical"-->
<!--                    android:rotation='@{lang.equals("ar")?180:0}'-->
<!--                    android:src="@drawable/ic_arrow_left"-->
<!--                    app:tint="@color/white" />-->
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>